fix: stream and thread fixes